Improved  Search Engine Optimization

--- a/Index.html
+++ b/Index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="description" content="This is a Tution website">
+    <meta name="keywords" content="tution, online classes">
+    <meta name="robots" content="INDEX, FOLLOW">
     <title>Daily Tuition</title>
 
 
